--- a/apps/resume/templates/resume/base.html
+++ b/apps/resume/templates/resume/base.html
@@ -14,7 +14,7 @@
           href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%221em%22  font-size=%22100%22>🐠</text></svg>">
     <!-- Bootstrap and font-awesome CSS -->
     <link href="https://cdn.bootcss.com/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <!-- blog CSS -->
     {% block top-file %}{% endblock %}
 </head>
