去掉请求头自动生成，必须手动点击

--- a/apps/blog/templates/blog/dashboard.html
+++ b/apps/blog/templates/blog/dashboard.html
@@ -205,7 +205,7 @@
                 // 指定图表的配置项和数据
                 option = {
                     backgroundColor: echartsTheme.backgroundColor,
-                    color: ['#ee6666', '#9a60b4', '#fac858', '#fc8452', '#ea7ccc', '#5470c6', '#91cc75', '#73c0de', '#3ba272'],
+                    color: ['#9a60b4', '#ee6666', '#fac858', '#fc8452', '#ea7ccc', '#5470c6', '#91cc75', '#73c0de', '#3ba272'],
                     toolbox: {
                         show: true,
                         feature: {
