去掉请求头自动生成，必须手动点击

--- a/apps/blog/templates/blog/dashboard.html
+++ b/apps/blog/templates/blog/dashboard.html
@@ -55,6 +55,7 @@
                 // 指定图表的配置项和数据
                 option = {
                     backgroundColor: echartsTheme.backgroundColor,
+                    color: ['#3ba272', '#9a60b4', '#fac858'],
                     toolbox: {
                         show: true,
                         feature: {
@@ -128,7 +129,7 @@
                 // 指定图表的配置项和数据
                 option = {
                     backgroundColor: echartsTheme.backgroundColor,
-                    color: ['#5470c6', '#91cc75', '#73c0de', '#fc8452', '#fac858', '#3ba272', '#ee6666', '#9a60b4', '#ea7ccc'],
+                    color: ['#5470c6', '#91cc75', '#73c0de', '#fac858', '#fc8452', '#3ba272', '#fac858', '#ee6666', '#9a60b4', '#ea7ccc'],
                     toolbox: {
                         show: true,
                         feature: {
@@ -205,7 +206,7 @@
                 // 指定图表的配置项和数据
                 option = {
                     backgroundColor: echartsTheme.backgroundColor,
-                    color: ['#9a60b4', '#ee6666', '#fac858', '#fc8452', '#ea7ccc', '#5470c6', '#91cc75', '#73c0de', '#3ba272'],
+                    color: ['#ee6666', '#fac858', '#fc8452', '#ea7ccc', '#9a60b4', '#5470c6', '#91cc75', '#73c0de', '#3ba272'],
                     toolbox: {
                         show: true,
                         feature: {
@@ -245,6 +246,5 @@
                 my30DayViewChart.setOption(option);
             </script>
         </div>
-
     </div>
 {% endblock %}
