添加工具热榜

--- a/apps/blog/templates/blog/dashboard.html
+++ b/apps/blog/templates/blog/dashboard.html
@@ -64,7 +64,7 @@
                         }
                     },
                     title: {
-                        text: '两周有效访问量趋势图',
+                        text: '两周有效访问量',
                         x: 'center',
                         y: 'bottom',
                         textStyle: {fontSize: 18, color: echartsTheme.titleColor}
@@ -144,7 +144,7 @@
                         }
                     },
                     title: {
-                        text: '每小时访问量趋势图',
+                        text: '24小时有效访问量',
                         x: 'center',
                         y: 'bottom',
                         textStyle: {fontSize: 18, color: echartsTheme.titleColor}
@@ -215,7 +215,7 @@
                         }
                     },
                     title: {
-                        text: '30天有效访问量趋势图',
+                        text: '30天有效访问量',
                         x: 'center',
                         y: 'bottom',
                         textStyle: {fontSize: 18, color: echartsTheme.titleColor}
