--- a/apps/blog/templates/blog/base.html
+++ b/apps/blog/templates/blog/base.html
@@ -129,7 +129,9 @@
             <a href="http://beian.miit.gov.cn/" target="_blank">{{ beian }}</a>
             {% if cnzz_protocol %}|&nbsp;{{ cnzz_protocol|safe }}{% endif %}
             <span class="with-love"><i class="fa fa-heart"></i></span>
-            <span id="web-day">网站已续航&nbsp;{{ site_create_date }}</span>
+            {% with web_update_time="" %}
+                <span id="web-day" {% if web_update_time %}title="最近更新时间：{{ web_update_time }}"{% endif %}>网站已续航&nbsp;{{ site_create_date }}</span>
+            {% endwith %}
         </p>
         <p class="card-text mb-1">Copyright&nbsp;&copy;&nbsp;<span id="year-info">{{ site_create_year }}-{{ this_year }}</span>
             <a href="https://github.com/Hopetree" target="_blank" title="博客作者的Github">Hopetree</a>.&nbsp;Powered&nbsp;by&nbsp;Django.
