--- a/apps/blog/templates/blog/dashboard.html
+++ b/apps/blog/templates/blog/dashboard.html
@@ -63,6 +63,12 @@
                             saveAsImage: {}
                         }
                     },
+                    tooltip: {
+                        trigger: 'axis',
+                        axisPointer: {
+                            type: 'shadow'
+                        }
+                    },
                     title: {
                         text: '两周有效访问量',
                         x: 'center',
@@ -212,6 +218,12 @@
                         feature: {
                             magicType: {type: ['line', 'bar']},
                             saveAsImage: {}
+                        }
+                    },
+                    tooltip: {
+                        trigger: 'axis',
+                        axisPointer: {
+                            type: 'shadow'
                         }
                     },
                     title: {
