限制：工具执行后禁用按钮一段时间

--- a/apps/tool/templates/tool/bd_push.html
+++ b/apps/tool/templates/tool/bd_push.html
@@ -147,6 +147,8 @@
 <script>
 $('#start-push').click(function() {
 	push_spider("{{ csrf_token }}", "{% url 'tool:baidu_push' %}");
+	//禁用按钮
+    disableButton($('#start-push'),2000);
 })
 
 </script>
