添加上周此时的数据

--- a/apps/blog/templates/blog/dashboard.html
+++ b/apps/blog/templates/blog/dashboard.html
@@ -108,7 +108,7 @@
                         {
                             type: 'line',
                             label: {
-                                show: true,
+                                show: false,
                                 position: 'top',
                                 textStyle: {
                                     fontSize: 12
@@ -118,7 +118,7 @@
                         {
                             type: 'line',
                             label: {
-                                show: true,
+                                show: false,
                                 position: 'top',
                                 textStyle: {
                                     fontSize: 12
