--- a/apps/blog/templates/blog/feedhub.html
+++ b/apps/blog/templates/blog/feedhub.html
@@ -99,7 +99,7 @@
         <div class="row">
             {% get_feed_list as feed_list %}
             {% for feed in feed_list %}
-                <div class="col-xs-12 col-6 col-sm-4 col-lg-3 col-xl-3 px-lg-2">
+                <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-3 px-lg-2">
                     <div class="card border-0 rounded-6 px-3 mb-2 mb-md-3">
                         <div class="card-header bg-none px-0">
                             <img alt="{{ feed.name }}" src="{{ feed.icon }}">
