--- a/apps/blog/templates/blog/feedhub.html
+++ b/apps/blog/templates/blog/feedhub.html
@@ -111,7 +111,7 @@
                         <ul class="rss-view-list list-group list-group-flush f-14">
                             {% for entry in feed.data.entries %}
                                 <li class="pt-1 pb-2">
-                                    <a href="{{ entry.link }}">{{ entry.title }}</a>
+                                    <a href="{{ entry.link }}" target="_blank">{{ entry.title }}</a>
                                 </li>
                             {% endfor %}
                         </ul>
