--- a/apps/blog/templates/blog/base.html
+++ b/apps/blog/templates/blog/base.html
@@ -16,7 +16,7 @@
     {% endblock %}
     <link rel="shortcut icon" href="{% static 'blog/img/favicon.ico' %}" type="image/x-icon"/>
     <!-- Bootstrap and font-awesome CSS -->
-    <link href="https://cdn.bootcss.com/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{% static 'blog/css/bootstrap.min.css' %}" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <script src="{% static 'blog/js/headroom.min.js' %}"></script>
     <!-- blog CSS -->
@@ -28,11 +28,13 @@
     {% if not request.COOKIES.toggleTheme %}
         {% now_hour as hour %}
         {% if hour < 6 or hour > 18 %}
-            <link id="theme-css-dark" href="{% static 'blog/css/night.css' %}?v={{ static_version.css_blog_night }}" rel="stylesheet">
+            <link id="theme-css-dark" href="{% static 'blog/css/night.css' %}?v={{ static_version.css_blog_night }}"
+                  rel="stylesheet">
         {% endif %}
     {% else %}
         {% if request.COOKIES.toggleTheme == "dark" %}
-            <link id="theme-css-dark" href="{% static 'blog/css/night.css' %}?v={{ static_version.css_blog_night }}" rel="stylesheet">
+            <link id="theme-css-dark" href="{% static 'blog/css/night.css' %}?v={{ static_version.css_blog_night }}"
+                  rel="stylesheet">
         {% endif %}
     {% endif %}
 </head>
@@ -45,7 +47,8 @@
 {% if messages %}
     <div class="container">
         {% for message in messages %}
-            <div class="alert {% if message.tags %}alert-{{ message.tags }}{% else %}alert-secondary{% endif %} alert-dismissible rounded-6 fade show"
+            <div class="alert {% if message.tags %}alert-
+                {{ message.tags }}{% else %}alert-secondary{% endif %} alert-dismissible rounded-6 fade show"
                  role="alert">
                 {{ message }}
                 <button type="button" class="close" data-dismiss="alert" aria-label="Close">
@@ -80,11 +83,11 @@
 <main>{% block base_content %}{% endblock %}</main>
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
+<script src="{% static 'blog/js/jquery.min.js' %}"></script>
 <!--js cookie 插件-->
 <script src="{% static 'blog/js/js.cookie.min.js' %}?v=20191123.12"></script>
-<script src="https://cdn.bootcss.com/popper.js/1.14.7/umd/popper.min.js"></script>
-<script src="https://cdn.bootcss.com/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
+<script src="{% static 'blog/js/popper.min.js' %}"></script>
+<script src="{% static 'blog/js/bootstrap.min.js' %}"></script>
 <script>
     $(function () {
         if (stop_headroom === false) {
@@ -111,7 +114,9 @@
                     document.title = '【新消息】' + myTitle
                 }
                 setTimeout("titleBlink()", 500)
-            }titleBlink()
+            }
+
+            titleBlink()
         }
     </script>
 {% endif %}
@@ -130,10 +135,14 @@
             {% if cnzz_protocol %}|&nbsp;{{ cnzz_protocol|safe }}{% endif %}
             <span class="with-love"><i class="fa fa-heart"></i></span>
             {% with web_update_time="" %}
-                <span id="web-day" {% if web_update_time %}title="最近更新时间：{{ web_update_time }}"{% endif %}>网站已续航&nbsp;{{ site_create_date }}</span>
+                <span id="web-day"
+                        {% if web_update_time %}
+                      title="最近更新时间：{{ web_update_time }}"
+                        {% endif %}>网站已续航&nbsp;{{ site_create_date }}</span>
             {% endwith %}
         </p>
-        <p class="card-text mb-1">Copyright&nbsp;&copy;&nbsp;<span id="year-info">{{ site_create_year }}-{{ this_year }}</span>
+        <p class="card-text mb-1">Copyright&nbsp;&copy;&nbsp;<span
+                id="year-info">{{ site_create_year }}-{{ this_year }}</span>
             <a href="https://github.com/Hopetree" target="_blank" title="博客作者的Github">Hopetree</a>.&nbsp;Powered&nbsp;by&nbsp;Django.
             <a href="{% url 'django.contrib.sitemaps.views.sitemap' %}" target="_blank">Sitemap</a>
         </p>
