--- a/apps/blog/templates/blog/base.html
+++ b/apps/blog/templates/blog/base.html
@@ -16,7 +16,7 @@
     {% endblock %}
     <link rel="shortcut icon" href="{% static 'blog/img/favicon.ico' %}" type="image/x-icon"/>
     <!-- Bootstrap and font-awesome CSS -->
-    <link href="{% static 'blog/css/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="{% static 'blog/css/bootstrap/4.3.1/bootstrap.min.css' %}" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <script src="{% static 'blog/js/headroom.min.js' %}"></script>
     <!-- blog CSS -->
@@ -87,7 +87,7 @@
 <!--js cookie 插件-->
 <script src="{% static 'blog/js/js.cookie.min.js' %}?v=20191123.12"></script>
 <script src="{% static 'blog/js/popper.min.js' %}"></script>
-<script src="{% static 'blog/js/bootstrap.min.js' %}"></script>
+<script src="{% static 'blog/js/bootstrap/4.3.1/bootstrap.min.js' %}"></script>
 <script>
     $(function () {
         if (stop_headroom === false) {
