--- a/apps/blog/templates/blog/tags/navbar.html
+++ b/apps/blog/templates/blog/tags/navbar.html
@@ -81,7 +81,9 @@
                     <input type="search" name="q" class="form-control" placeholder="站内搜索" autocomplete="off"
                            required>
                     <div class="input-group-btn">
-                        <button class="btn btn-info" type="submit"><i class="fa fa-search"></i></button>
+                        <button class="btn btn-info" type="submit" aria-label="文章搜索">
+                            <i class="fa fa-search"></i>
+                        </button>
                     </div>
                 </div><!-- /input-group -->
             </form>
