静态文件全部使用本地

--- a/apps/blog/templates/blog/articleEdit.html
+++ b/apps/blog/templates/blog/articleEdit.html
@@ -49,7 +49,7 @@
     </div>
 {% endblock %}
 {% block end_file %}
-    <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
+    <script src="{% static 'blog/js/jq/3.3.1/jquery.min.js' %}"></script>
     <script src="{% static 'editor/js/editormd.min.js' %}"></script>
     <script type="text/javascript">
         let testEditor;
