--- a/apps/tool/templates/tool/editor.html
+++ b/apps/tool/templates/tool/editor.html
@@ -74,7 +74,7 @@ base_vars = safe_load(vars_string)
 ![izone]({% static 'blog/img/favicon.ico' %} "izone")</textarea>
     </div>
 </div>
-<script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
+<script src="{% static 'blog/js/jq/3.3.1/jquery.min.js' %}"></script>
 <script src="{% static 'editor/js/editormd.min.js' %}"></script>
 <script type="text/javascript">
     let testEditor;
