--- a/apps/tool/templates/tool/json2go.html
+++ b/apps/tool/templates/tool/json2go.html
@@ -86,7 +86,7 @@
     </table>
 
 </div>
-<script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
+<script src="{% static 'blog/js/jq/3.3.1/jquery.min.js' %}"></script>
 <script src="{% static 'tool/js/json2go/highlight.min.js' %}"></script>
 <script src="{% static 'tool/js/json2go/json-to-go.js' %}"></script>
 <script src="{% static 'tool/js/json2go/common.js' %}"></script>
