--- a/apps/blog/templates/blog/base.html
+++ b/apps/blog/templates/blog/base.html
@@ -17,7 +17,7 @@
     <link rel="shortcut icon" href="{% static 'blog/img/favicon.ico' %}" type="image/x-icon"/>
     <!-- Bootstrap and font-awesome CSS -->
     <link href="{% static 'blog/css/bootstrap/4.3.1/bootstrap.min.css' %}" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="{% static 'blog/font-awesome/4.7.0/css/font-awesome.min.css' %}" rel="stylesheet">
     <script src="{% static 'blog/js/headroom.min.js' %}"></script>
     <!-- blog CSS -->
     <link href="{% static 'blog/css/base.css' %}?v={{ static_version.css_blog_base }}" rel="stylesheet">
@@ -83,7 +83,7 @@
 <main>{% block base_content %}{% endblock %}</main>
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="{% static 'blog/js/jquery.min.js' %}"></script>
+<script src="{% static 'blog/js/jq/3.3.1/jquery.min.js' %}"></script>
 <!--js cookie 插件-->
 <script src="{% static 'blog/js/js.cookie.min.js' %}?v=20191123.12"></script>
 <script src="{% static 'blog/js/popper.min.js' %}"></script>
