静态文件全部使用本地

--- a/apps/blog/templates/blog/dashboard.html
+++ b/apps/blog/templates/blog/dashboard.html
@@ -11,7 +11,7 @@
 {% endblock %}
 
 {% block top-file %}
-    <script src="https://cdn.bootcss.com/echarts/5.4.3/echarts.min.js"></script>
+    <script src="{% static 'blog/js/echarts/5.4.3/echarts.min.js' %}"></script>
     <!--设置默认的主题颜色为亮色-->
     <script>
         var baseEchartsColor = {
