--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -41,8 +41,8 @@
 
   <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!--[if lt IE 9]>
-    <script src="https://cdn.bootcss.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-    <script src="https://cdn.bootcss.com/respond/1.4.2/respond.min.js"></script>
+    <script src="{% static 'blog/js/html5shiv/3.7.2/html5shiv.min.js' %}"></script>
+    <script src="{% static 'blog/js/respond/1.4.2/respond.min.js' %}"></script>
   <![endif]-->
 </head>
 {% load i18n %}
