静态文件全部使用本地

--- a/apps/resume/templates/resume/base.html
+++ b/apps/resume/templates/resume/base.html
@@ -13,7 +13,7 @@
     <link rel="icon"
           href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%221em%22  font-size=%22100%22>🐠</text></svg>">
     <!-- Bootstrap and font-awesome CSS -->
-    <link href="{% static 'blog/css/bootstrap/4.3.1/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="{% static 'blog/bootstrap/4.3.1/css/bootstrap.min.css' %}" rel="stylesheet">
     <link href="{% static 'blog/font-awesome/4.7.0/css/font-awesome.min.css' %}" rel="stylesheet">
     <!-- blog CSS -->
     {% block top-file %}{% endblock %}
@@ -24,7 +24,7 @@
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script src="{% static 'blog/js/jq/3.3.1/jquery.min.js' %}"></script>
-<script src="{% static 'blog/js/bootstrap/4.3.1/bootstrap.min.js' %}"></script>
+<script src="{% static 'blog/bootstrap/4.3.1/js/bootstrap.min.js' %}"></script>
 {% block end_file %}{% endblock %}
 </body>
 </html>
