--- a/templates/webstack/base.html
+++ b/templates/webstack/base.html
@@ -9,7 +9,7 @@
     <title>{% block title %}{% endblock %}</title>
     {% block meta %}{% endblock %}
     <link href="{% static 'blog/font-awesome/4.7.0/css/font-awesome.min.css' %}" rel="stylesheet">
-    <link href="{% static 'blog/css/bootstrap/3.0.2/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="{% static 'blog/bootstrap/3.0.2/css/bootstrap.min.css' %}" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'webstack/assets/css/xenon-core.css' %}">
     <link rel="stylesheet" href="{% static 'webstack/assets/css/xenon-components.css' %}">
     <link rel="stylesheet" href="{% static 'webstack/assets/css/xenon-skins.css' %}">
@@ -245,7 +245,7 @@
     });
 </script>
 <!-- Bottom Scripts -->
-<script src="{% static 'blog/js/bootstrap/3.3.1/bootstrap.min.js' %}"></script>
+<script src="{% static 'blog/bootstrap/3.3.1/js/bootstrap.min.js' %}"></script>
 <script src="{% static 'webstack/assets/js/TweenMax.min.js' %}"></script>
 <script src="{% static 'webstack/assets/js/resizeable.js' %}"></script>
 <script src="{% static 'webstack/assets/js/joinable.js' %}"></script>
