--- a/apps/blog/templates/blog/tags/navbar.html
+++ b/apps/blog/templates/blog/tags/navbar.html
@@ -109,6 +109,8 @@
                                     class="fa fa-fw fa-key text-info mr-2"></i>后台管理</a>
                             <a class="dropdown-item pl-3" href="{% url 'blog:dashboard' %}"><i
                                     class="fa fa-fw fa-tachometer text-info mr-2"></i>网站看板</a>
+                            <a class="dropdown-item pl-3" href="{% url 'admin:blog_article_add' %}"><i
+                                    class="fa fa-fw fa-plus text-info mr-2"></i>新增文章</a>
                         {% endif %}
                         {% url 'comment:notification_no_read' as no_read_url %}
                         {% url 'comment:notification' as read_url %}
